--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,11 @@ uvicorn>=0.24.0
 jinja2>=3.1.0
 pydantic>=2.0.0
 python-multipart>=0.0.6
-ag2[openai]==0.9.7
-fix-busted-json>=0.0.18
+langgraph>=0.2.0
+langchain>=0.3.0
+langchain-openai>=0.2.0
+langchain-community>=0.3.0
+langchain-core>=0.3.0
+openai>=1.0.0
+requests>=2.31.0
+aiofiles>=23.0.0
